--- a/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle/Return_1_row_of_pascal_triangle.adoc
+++ b/DS_Questions/Questions/vectors_arrays/2d-grid/Pascal_Traingle/Return_1_row_of_pascal_triangle.adoc
@@ -22,7 +22,7 @@ Input: rowIndex = 1
 Output: [1,1]
 ```
 
-== Approach-1. O(^n^2)
+== Approach-1. O(n^2^)
 === Logic
 * 1st and last elements of every row are always 1.
 ```c
