--- a/DS_Questions/Questions/Number/Power_of_4.adoc
+++ b/DS_Questions/Questions/Number/Power_of_4.adoc
@@ -110,3 +110,22 @@ class Solution:
  
         return False
 ```
+
+==== Javascript
+```js
+var isPowerOfFour = function(n) {
+    if (n == 0 || n == 2 || n == 3) {
+      return false;
+    }
+    if (n == 1) {
+        return true;
+    }
+    
+    if ((n & (n - 1)) === 0) {
+      if ((n & 0xAAAAAAAA) === 0) {
+            return true
+        }
+    }
+    return false
+};
+```
