--- a/DS_Questions/Questions/Number/Power_of_4.adoc
+++ b/DS_Questions/Questions/Number/Power_of_4.adoc
@@ -4,7 +4,7 @@
 == link:https://leetcode.com/problems/power-of-four/description/[342. Power of Four]
 Given an integer n, return true if it is a power of four. Otherwise, return false.
 
-An integer n is a power of four, if there exists an integer x such that n == 4x.
+An integer n is a power of four, if there exists an integer x such that n == 4^x^.
 ```
 Example 1:
 Input: n = 16
